--- a/src/Componant/MasterHome/Footer/Footer.css
+++ b/src/Componant/MasterHome/Footer/Footer.css
@@ -42,7 +42,7 @@
     color: #FFB74D
 }
 
-.card-title {
+.footer-card-title {
     margin-bottom: .75rem;
     font-weight: 900;
     font-size: 15px;
